name:           Top
version:        1.9.1
synopsis:           Constraint solving framework employed by the Helium Compiler.
homepage:           https://github.com/Helium4Haskell/Top
description:

  At its most general, Top is a framework for constructing abstract interpretations 
  which focuses on giving good feedback on why an abstract interpretation does not give 
  any useful information. In a mathematical notation this is usually made explicit by 
  returning the top element of a (complete) lattice. This is also one of the reasons 
  for the name of the project.

category:           Constraints
copyright:          (c) 2012-2016
license:        GPL
license-file:       LICENSE.txt
author:         Bastiaan Heeren, Jurriaan Hage
maintainer:         helium4haskell@gmail.com
stability:          provisional
extra-source-files:     CREDITS.txt
build-type:         Simple
cabal-version:      >= 2.0
tested-with:        GHC == 8.4.4

source-repository head
  type:     git
  location: https://github.com/Helium4Haskell/Top.git

--------------------------------------------------------------------------------

Executable topsolver
  Build-Depends:     base >= 3 && < 5, containers, mtl, parsec
  if !impl(ghc >= 8.0)
    Build-Depends:   semigroups == 0.18.*
  ghc-options:       -Wall -Wno-orphans
  default-language:  Haskell98
  hs-source-dirs:    src
  Main-is:           TopSolver.hs
  Other-modules:
    Top.Constraint
    Top.Constraint.Equality
    Top.Constraint.Information
    Top.Constraint.Polymorphism
    Top.Constraint.Qualifier
    Top.Implementation.Basic
    Top.Implementation.General
    Top.Implementation.Overloading
    Top.Implementation.TypeClassDirectives
    Top.Implementation.TypeGraph.ApplyHeuristics
    Top.Implementation.TypeGraph.Basics
    Top.Implementation.TypeGraph.Class
    Top.Implementation.TypeGraph.ClassMonadic
    Top.Implementation.TypeGraph.DefaultHeuristics
    Top.Implementation.TypeGraph.EquivalenceGroup
    Top.Implementation.TypeGraph.Heuristic
    Top.Implementation.TypeGraph.Path
    Top.Implementation.TypeGraph.Standard
    Top.Implementation.TypeGraphSubstitution
    Top.Implementation.TypeInference
    Top.Interface.Basic
    Top.Interface.Qualification
    Top.Interface.Substitution
    Top.Interface.TypeInference
    Top.Monad.Select
    Top.Monad.StateFix
    Top.Solver
    Top.Solver.TypeGraph
    Top.Types
    Top.Types.Classes
    Top.Types.Kinds
    Top.Types.Primitive
    Top.Types.Qualification
    Top.Types.Quantification
    Top.Types.Schemes
    Top.Types.Substitution
    Top.Types.Synonym
    Top.Types.Unification
    Top.Util.Embedding
    Top.Util.Empty
    Top.Util.Option
    Utils
    
Library
  Build-Depends:     base >= 3 && < 5, containers, mtl
  if !impl(ghc >= 8.0)
    Build-Depends:   semigroups == 0.18.*
  ghc-options:       -Wall -Wno-orphans
  default-language:  Haskell98
  hs-source-dirs:    src
  Exposed-modules:
    Top.Constraint
    Top.Constraint.Equality
    Top.Constraint.Information
    Top.Constraint.Polymorphism
    Top.Constraint.Qualifier
    Top.Implementation.Basic
    Top.Implementation.FastSubstitution
    Top.Implementation.General
    Top.Implementation.Overloading
    Top.Implementation.SimpleSubstitution
    Top.Implementation.TypeGraph.ApplyHeuristics
    Top.Implementation.TypeGraph.Basics
    Top.Implementation.TypeGraph.Class
    Top.Implementation.TypeGraph.ClassMonadic
    Top.Implementation.TypeGraph.DefaultHeuristics
    Top.Implementation.TypeGraph.EquivalenceGroup
    Top.Implementation.TypeGraph.Heuristic
    Top.Implementation.TypeGraph.Path
    Top.Implementation.TypeGraph.Standard
    Top.Implementation.TypeGraphSubstitution
    Top.Implementation.TypeClassDirectives
    Top.Implementation.TypeInference
    Top.Interface.Basic
    Top.Interface.Qualification
    Top.Interface.Substitution
    Top.Interface.TypeInference
    Top.Monad.Select
    Top.Monad.StateFix
    Top.Ordering.Tree
    Top.Ordering.TreeWalk
    Top.Solver
    Top.Solver.Greedy
    Top.Solver.PartitionCombinator
    Top.Solver.SwitchCombinator
    Top.Solver.TypeGraph
    Top.Types
    Top.Types.Classes
    Top.Types.Kinds
    Top.Types.Primitive
    Top.Types.Qualification
    Top.Types.Quantification
    Top.Types.Schemes
    Top.Types.Substitution
    Top.Types.Synonym
    Top.Types.Unification
    Top.Util.Embedding
    Top.Util.Empty
    Top.Util.Option
  Other-modules:
    Utils

--------------------------------------------------------------------------------

